Remove mongo dependency poppins#103
